@@ -1,4 +1,4 @@
 DIST SIstyle-2.3.0.zip 833787 RMD160 0fbb6edaf0690cfefaa12c5c3008da3d58b57d07 SHA1 7df87015b1cb9b5c64ec726c39a647907e66d80b SHA256 3b187b6f4edcdddd01255f4993df533ea9635c527773756fa16996a4c59fcb27
-EBUILD SIstyle-2.3.0.ebuild 915 RMD160 c88a61ca1d26e5ccfe0780bf8798c56cda0e8999 SHA1 610abcce68af51a92ccdd76fcbec79bdff3b829c SHA256 28f257529405aa2a00ced56c2421ec79c94a6c27ce29e34cbd27f9bbe1b03635
-MISC ChangeLog 565 RMD160 68f853d4430d9fc247f1320951ac93488a3a4b3c SHA1 9b7721a1c5f5f3a2b04cc3c289d4dd94f4532fa0 SHA256 d5197f030e3b8b4cdd2bf078575a6f31ddd9806449ecd3fba3ff38f66fbc3548
+EBUILD SIstyle-2.3.0.ebuild 933 RMD160 5dfee9f997a6c10958468d3eab244cd4cefc89dd SHA1 fbd37cfd070a6b7069c89813d7c55f8786a4f43b SHA256 6be62f0660d9c768dc70d8c0b3c5d2117c64a65fbc8a52735217361160c4ac13
+MISC ChangeLog 693 RMD160 b0dc75a4377d5c73726a5de489bc348f1e36e20d SHA1 59977a36b44da28fd4ca16d2314ec73ad7ee3828 SHA256 44cf22573456bfbeeb9a796c9365876435d0eb209080f1efe0788ed9d92194ca
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
