@@ -1,6 +1,10 @@
 # ChangeLog for dev-tex/SIstyle
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  SIstyle-2.3.0.ebuild:
+  Add RDEPEND, simplify, add die statements
 
   01 Nov 2008; Tomas Chvatal <scarabeus@gentoo.org> SIstyle-2.3.0.ebuild:
   Remove wrong duplicate virtual/tetex RDEPEND.
